# tvhtokodi

./: .gitignore  README.md  checkcomskip.py  pyproject.toml  tvheadend-api.md  tvhtokodi-example.json  tvhtokodi.desktop
.github/agents/: tvheadend-kodi-gtk4.agent.md
docs/: todo.md
exampledata/: docomskip.json  firstblock.json  lastblock.json  recordings.json
src/tvhtokodi/: __init__.py  cli.py  config.py  files.py  films.py  gtk_setup.py  gui.py  kodi.py  move.py  nfo.py  recordings.py  remotefiles.py  tvh.py
src/tvhtokodi/docs/: todo.md
tests/: test_config.py  test_files.py  test_recordings.py  test_remotefiles.py  test_tvh.py  test_tvhtokodi.py
