[tool.poetry]
name = "tvhtokodi"
version = "0.2.13"
description = "edit tvh recordings and import them into the kodi db"
authors = ["ccdale <chris.charles.allison+tvhtokodi@gmail.com>"]
readme = "README.md"
packages = [{include = "tvhtokodi", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
fabric = "^3.1.0"
pysimplegui = "^4.60.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[tool.poetry.scripts]
tvh = "tvhtokodi.gui:doGui"
tvhtokodi = "tvhtokodi.move:doMove"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
