[project]
name = "tvhtokodi"
version = "0.3.11"
description = "edit tvh recordings and import them into the kodi db"
authors = [{ name = "ccdale", email = "chris.charles.allison+tvhtokodi@gmail.com" }]
requires-python = ">=3.10.0,<4"
readme = "README.md"
dependencies = [
    "requests>=2.31.0,<3",
    "fabric>=3.1.0,<4",
    "python-daemon>=3.0.1,<4",
    "ccalogging>=0.5.3,<0.6",
    "tabulate>=0.9.0",
]

[project.scripts]
tvh = "tvhtokodi.gui:doGui"
tvhtokodi = "tvhtokodi.move:daemonDirWatch"

[dependency-groups]
dev = ["pytest>=7.3.2,<8"]

[tool.hatch.build.targets.sdist]
include = ["src/tvhtokodi"]

[tool.hatch.build.targets.wheel]
include = ["src/tvhtokodi"]

[tool.hatch.build.targets.wheel.sources]
"src/tvhtokodi" = "tvhtokodi"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
